syntax = "proto3";
package raft;

option go_package = "proto/";

message RequestVote {
  int64 term = 1;
  int64 candidate_id = 2;
  int64 last_log_index = 3;
  int64 last_log_term = 4;
}

message RequestVoteResponse {
  int64 term = 1;
  bool vote_granted = 2;
}

message AppendEntries {
  int64 term = 1;
  int64 leader_id = 2;
  int64 prev_log_idx = 3;
  int64 prev_log_term = 4;

  // empty for heartbeat messages from leader to followers
  repeated Log entries = 5;

  int64 leader_commit_idx = 6;
}

message Log  {
  int64 term = 1;
  int64 id = 2;
  Cmd data = 3;
}

message Cmd {
  string op = 1;
  string key = 2;
  string value = 3;
}

message AppendEntriesResponse {
  int64 current_term = 1;
  bool success = 2;
}

message GetStatusRequest {}

message GetStatusResponse {
  int64 current_term = 1;
  string node_state = 2;
  int64 last_applied = 3;
  int64 last_committed = 4;
  int64 node_id = 5;
}

message GetLogsRequest {}

message GetLogsResponse {
  repeated Log logs = 1;
}

service Raft {
  rpc AppendEntriesRPC(AppendEntries) returns (AppendEntriesResponse) {};
  rpc RequestVoteRPC(RequestVote) returns (RequestVoteResponse) {};
}
